# EvoNet

./: .gitignore  .readthedocs.yml  .travis.yml  AddProbExampleLinks.csv  AddProbExampleNodes.csv  AddProbExampleWeights.csv  CHANGELOG.rst  CMakeLists.txt  Dockerfile  Dockerfile.1  LICENSE  README.rst  README.txt  docker-compose.yaml  docker-entrypoint.sh  main.cpp  remote_debug.sh
docs/: CMakeLists.txt  Doxyfile.in  conf.py  faq.rst  generate_help.py  index.rst  reference.rst  testing.rst  usage.rst
docs/about/: contribute.rst
docs/guide/: build.rst  install.rst  usage.rst
docs/start/: start.rst
src/: CMakeLists.txt  README.txt  docker-entrypoint.sh  main.cpp
src/OpenMS/draft/: Dummy.cpp
src/OpenMS/include/: TransformationModel.h  TransformationModelLinear.h
src/OpenMS/pxds/: TransformationModel.pxd
src/OpenMS/source/: TransformationModel.1.cpp  TransformationModel.cpp  TransformationModelLinear.cpp
src/OpenMS/tests/: TransformationModelLinear_test.cpp  TransformationModel_test.cpp
src/evonet/: CMakeLists.txt  cmake_findExternalLibs.cmake  configh.cmake  includes.cmake
src/evonet/include/EvoNet/: config.h.in  evonet_data_path.h.in  evonet_package_version.h.in
src/evonet/include/EvoNet/core/: Helloworld.h  Preprocessing.h  Statistics.h  StringParsing.h  sources.cmake
src/evonet/include/EvoNet/graph/: sources.cmake
src/evonet/include/EvoNet/io/: CSVWriter.h  DataFile.h  LinkFile.h  ModelFile.h  ModelInterpreterFile.h  ModelInterpreterFileDefaultDevice.h  ModelInterpreterFileGpu.h  NodeFile.h  Parameters.h  PopulationTrainerFile.h  WeightFile.h  sources.cmake
src/evonet/include/EvoNet/ml/: ActivationFunction.h  ActivationFunctionTensor.h  IntegrationFunction.h  IntegrationFunctionTensor.h  Interpreter.h  Link.h  LossFunction.h  LossFunctionTensor.h  MetricFunction.h  MetricFunctionTensor.h  Model.h  ModelBuilder.h  ModelBuilderExperimental.h  ModelErrorData.h  ModelInterpreter.h  ModelInterpreterDefaultDevice.h  ModelInterpreterGpu.h  ModelKernal.h  ModelKernalGpu.h  ModelLogger.h  ModelReplicator.h  ModelReplicatorExperimental.h  ModelResources.h  ModelTrainer.h  ModelTrainerDefaultDevice.h  ModelTrainerExperimental.h  ModelTrainerExperimentalDefaultDevice.h  ModelTrainerExperimentalGpu.h  ModelTrainerGpu.h  Node.h  NodeTensorData.h  OpToTensorOp.h  PopulationLogger.h  PopulationTrainer.h  PopulationTrainerDefaultDevice.h  PopulationTrainerExperimental.h  PopulationTrainerExperimentalDefaultDevice.h  PopulationTrainerExperimentalGpu.h  PopulationTrainerGpu.h  Solver.h  (+5 more)
src/evonet/include/EvoNet/models/: CVAEFullyConn.h  CVAEFullyConnDefaultDevice.h  CVAEFullyConnGpu.h  sources.cmake
src/evonet/include/EvoNet/simulator/: AddProbSimulator.h  BiochemicalDataSimulator.h  BiochemicalReaction.h  ChromatogramSimulator.h  DataSimulator.h  EMGModel.h  HarmonicOscillatorSimulator.h  MNISTSimulator.h  MetabolomicsClassificationDataSimulator.h  MetabolomicsLatentArithmeticDataSimulator.h  MetabolomicsLatentTraversalDataSimulator.h  MetabolomicsLatentUnsClassDataSimulator.h  MetabolomicsReconstructionDataSimulator.h  PeakSimulator.h  sources.cmake
src/evonet/source/core/: Helloworld.cpp  sources.cmake
src/evonet/source/io/: CSVWriter.cpp  LinkFile.cpp  sources.cmake
src/evonet/source/ml/: Link.cpp  sources.cmake
src/examples/: CMakeLists.txt  executables.cmake
src/examples/source/: AddProbAtt_Gpu_example.cu  AddProbAtt_example.cpp  AddProbRec_Gpu_example.cu  AddProbRec_example.cpp  AdditionProblem_Gpu_example.cu  AdditionProblem_example.cpp  CUDA_example.cu  CUDA_example.cu.cc  HarmonicOscillator_Gpu_example.cu  HarmonicOscillator_example.cpp  KineticModel2_Gpu_example.cu  KineticModel2_example.cpp  KineticModel_Gpu_example.cu  KineticModel_example.cpp  MNIST_AAE_LabelStyle_example.cpp  MNIST_AAE_example.cpp  MNIST_Bayes_Gpu_example.cu  MNIST_Bayes_example.cpp  MNIST_CVAE_Gpu_example.cu  MNIST_CVAE_example.cpp  MNIST_CovNet_Gpu_example.cu  MNIST_CovNet_example.cpp  MNIST_DenoisingAE_Gpu_example.cu  MNIST_DenoisingAE_example.cpp  MNIST_DotProdAtten_Gpu_example.cu  MNIST_DotProdAtten_example.cpp  MNIST_DotProdAtten_example.cu  MNIST_EvoNet_example.cpp  MNIST_GAN_example.cpp  MNIST_LSTM_Gpu_example.cu  MNIST_LSTM_example.cpp  MNIST_VAE_Gpu_example.cu  MNIST_VAE_example.cpp  MNIST_example.cpp  MemoryCell_example.cpp  Metabolomics2_Gpu_example.cu  Metabolomics2_example.cpp  Metabolomics_BatchCorrection.cpp  Metabolomics_BatchCorrection_Gpu.cu  Metabolomics_CVAE.h  (+19 more)
src/examples/source_CUDA/: MNIST_example.cu
src/smartpeak/: CMakeLists.txt  cmake_findExternalLibs.cmake  includes.cmake
src/smartpeak/include/SmartPeak/algorithm/: ChromatogramSimulator.h  EMGModel.h  PeakSimulator.h  sources.cmake
src/smartpeak/include/SmartPeak/core/: CPUDevice.h  DeviceManager.h  GPUDevice.h  HardwareManager.h  KernalManager.h  OperationsManager.h  Preprocessing.h  Statistics.h  StringParsing.h  sources.cmake
src/smartpeak/include/SmartPeak/graph/: CircuitFinder.h  Header1.h  sources.cmake
src/smartpeak/include/SmartPeak/io/: CSVWriter.h  DataFile.h  LinkFile.h  (+9 more)
src/smartpeak/include/smartPeak/: config.h.in
src/smartpeak/source/algorithm/: ChromatogramSimulator.cpp  EMGModel.cpp  PeakSimulator.cpp  sources.cmake
src/smartpeak/source/core/: helloworld.cpp  sources.cmake
src/smartpeak/source/io/: DataFile.cpp  LinkFile.cpp  ModelFile.cpp  NodeFile.cpp  PopulationTrainerFile.cpp  WeightFile.cpp  sources.cmake
src/smartpeak/source/ml/: ELU.cpp  EuclideanDistance.cpp  L2.cpp  Layer.cpp  Link.cpp  Model.cpp  ModelBuilder.cpp  ModelLogger.cpp  ModelReplicator.cpp  ModelTrainer.cpp  Node (2) (2).cpp  Node.cpp  PopulationTrainer.cpp  ReLU.cpp  SharedFunctions.cpp  Trainer.cpp  Weight.cpp  sources.cmake
src/smartpeak/source/simulator/: ChromatogramSimulator.cpp  DataSimulator.cpp  EMGModel.cpp  PeakSimulator.cpp  sources.cmake
src/tests/: CMakeLists.txt
src/tests/class_tests/: CMakeLists.txt
src/tests/class_tests/evonet/: CMakeLists.txt  executables.cmake
src/tests/class_tests/smartpeak/: CMakeLists.txt  executables.cmake
src/tests/coding/: CMakeLists.txt
(+278 files in other folders)
