cmake_minimum_required(VERSION 3.0.2 FATAL_ERROR)
project("SmartPeak_src")

#------------------------------------------------------------------------------
# SmartPeak core lib
#------------------------------------------------------------------------------
add_subdirectory(smartpeak)

#------------------------------------------------------------------------------
# Tests
#------------------------------------------------------------------------------
add_subdirectory(tests)
